.local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ower: 'jiwenchen123123@gmail.com'
    hobby: 'sleep'
  name: 'quicklunch-dev'
  labels:
    environment: 'dev'
    team: 'backend'
