.local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quicklunch-dev-ingress
  namespace: quicklunch-dev
  labels:
    app.kubernetes.io/name: quicklunch-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: quicklunch.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-service
                port:
                  number: 80
